...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="username"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="password"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Account" />

    <Button
        android:id="@+id/modify_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modify Account" />
...
