<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/help_button"
        android:icon="@drawable/ic_menu_help"
        android:title="About This App"
        app:showAsAction="ifRoom|withText" />
    <item
        android:icon="@drawable/ic_menu_change_font"
        android:id="@+id/change_font_button"
        android:layout_width="wrap_content"
        android:title="Change Font Button"
        app:showAsAction="ifRoom|withText"/>
</menu>